# Morse-Pi

./: README.md  cross-compile.ps1  cross-compile.sh  install-rust.sh  install.sh  packages.sh  settings.json  transition-rust.sh  transition.sh  update-rust.sh  update.sh
.github/workflows/: pages.yml
docs/: configuration.html  getting-started.html  index.html  maintenance.html  networking.html  reference.html  style.css  troubleshooting.html  usb-hid.html  wiring.html
morse-translator/: app.py  app.py.bak-20260225-2009  gpio_monitor.py  keyboard.py  morse.py  settings.json  shared.py  sound.py  words.json
morse-translator-rust/: Cargo.toml  build.rs
morse-translator-rust/src/: gpio.rs  keyboard.rs  main.rs  morse.rs  network.rs  sound.rs  state.rs
morse-translator-rust/templates/: diag.html  index.html  radio.html
morse-translator-zig/: build.zig  build.zig.zon
morse-translator-zig/.zig-cache/c/553619eb5247f4fbf6bec1f6956fd83a/: options.zig
morse-translator-zig/.zig-cache/o/8f8475c77ea9a0106829f8b811f5be29/: morse-pi
morse-translator-zig/src/: gpio.zig  keyboard.zig  main.zig  morse.zig  network.zig  sound.zig  state.zig
morse-translator/templates/: diag.html  index.html  index.html.bak
