[package]
name = "morse-pi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "morse-pi"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"

[features]
default = []
gpio = []     # Enables pigpio FFI bindings

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
